--- a/content/post/2017-10-09-new-york.md
+++ b/content/post/2017-10-09-new-york.md
@@ -13,7 +13,10 @@ Dein erstes Mal in New York
 <!--more-->
 
 ## Tag 1
-Jedes mal nachdem wir die Bagels vernascht haben, ging es rein in die Stadt die niemals schläft. Nachdem wir in Serena-Manier in New York  angekommen sind (Grand Central Station) sind wir selbstverständlich erstmal auf der 5th Ave shoppen gegangen. Das hat Spaß gebracht, bis dein schrecklicher Freund sich ein Fauxpas erlaubt hat. Im Endeffekt war es für dich aber eigentlich ganz günstig, weil du dein Kleid für den halben Preis bekommen hast. Danach haben wir sweete pics beim Rockefeller Center gemacht, verzweifelt nach irgendwelchen Postkarten beim MoMo Museum gesucht, sind durch den Central Park gelaufen, waren im M&M Store, auf der Time Square, in mindestens 10 Souvenirgeschäften in denen jede einzelne Sonnenbrille anprobiert werden musste. Auf dem Rückweg sind wir noch an der 34th mit dem Riesen-Macy's entlanggeschlendert und dem Empire State Building über den Weg gelaufen - was ein Zufall. Noch am gleichen Abend waren wir wieder in Big Apple um es in einer Rooftop-Bar richtig krachen zulassen. Dir hat aber natürlich die Pizza auf dem Weg zum Time Square bei Nacht am besten gefallen. 
+Jedes mal nachdem wir die Bagels vernascht haben, ging es rein in die Stadt die niemals schläft. Nachdem wir in Serena-Manier in New York  angekommen sind (Grand Central Station) sind wir selbstverständlich erstmal auf der 5th Ave shoppen gegangen. Das hat Spaß gebracht, bis dein schrecklicher Freund sich ein Fauxpas erlaubt hat. Im Endeffekt war es für dich aber eigentlich ganz günstig, weil du dein Kleid für den halben Preis bekommen hast. Danach haben wir sweete pics beim Rockefeller Center gemacht, verzweifelt nach irgendwelchen Postkarten beim MoMo Museum gesucht, sind durch den Central Park gelaufen, waren im M&M Store, auf der Time Square, in mindestens 10 Souvenirgeschäften in denen jede einzelne Sonnenbrille anprobiert werden musste. Auf dem Rückweg sind wir noch an der 34th mit dem Riesen-Macy's entlanggeschlendert und dem Empire State Building über den Weg gelaufen - was ein Zufall. Noch am gleichen Abend waren wir wieder in Big Apple um es in einer Rooftop-Bar richtig krachen zulassen. Dir hat aber natürlich die Pizza auf dem Weg zur Time Square bei Nacht am besten gefallen. 
+
+![Empire State Building](/img/ESB.jpg "Empire State Building") ![Brutale Shopper](/img/Heftig.jpg "Brutale Shopper") ![Parco Centralo](/img/CP.jpg "Parco Centralo") ![Stinki in Action](/img/Stinki.jpg "Stinki in Action")
+
 
 
 ## Tag 2
@@ -21,7 +24,12 @@ Jedes mal nachdem wir die Bagels vernascht haben, ging es rein in die Stadt die 
 Am zweiten Tag sind wir wieder die 34th entlang zu einem Flomarkt in Hell's Kitchen. Nachdem die Damen auf der HighLine schon mehrere Schwächeanfälle hatten, haben wir uns entschlossen Fahräder zu kaufen. Der nächste Fauxpas hat sich da schon angebahnt - der schreckliche Freund fährt einfach viel zu schnell. Überraschenderweise sind wir trotzdem alle lebend an den Denkmälern für die Zwillingtürme angekommen. Die Reise ging weiter zum Fähranleger zur Freiheitsstatue. Das Versteckenspiel dort war eigentlich mein Highlight des Tages, dicht gefolgt von der $6 Zitronenlimonade. Als wir wieder in Manhatten waren, hat es angefangen zu schütten und wir sind schnell in ein Sushirestaurant gegangen - jippi suhsi... 
 Danach mussten wir aber schnell nach Hause weil deine Augen schon angefangen haben zu jucken - Alarmstufe Rot. Nichts desto trotz haben wir im strömenden Regen noch den Bullen gestreichelt, bei Trump vorbeigeschaut, und nachdem sich das Wetter gebessert hat unter der Brooklyn Bridge und entlang des East Rivers zurück zur Grand Central Station geradelt. 
 
+![Statue of Liberty](/img/nyc2.jpg "Statue of Liberty") ![Bull](/img/Bull.jpg "Die 3 Bullen") 
+
+
 
 ## Tag 3
 
 Unsere dritte Tour war etwas unter Zeitdruck, da wir Nachmittags nach Erie fahren wollte. Trotzdem haben wir noch eine schöne Radtour nach Williamsburg und über die Brooklyn Bridge zurück zur Grand Central Station gemacht. Außer dass ich eine Fahrradstation zuweit gefahren bin, habe ich mich glaube ich sogar recht gut geschlagen und die Prinzessin zufrieden gestellt. 
+
+![Brooklyn Bridge](/img/BB.jpg "Brooklyn Bridge")
