--- a/content/post/2017-10-09-new-york.md
+++ b/content/post/2017-10-09-new-york.md
@@ -13,7 +13,7 @@ Dein erstes Mal in New York
 <!--more-->
 
 ## Tag 1
-Jedes mal nachdem wir die Bagels vernascht haben, ging es rein in die Stadt die niemals schläft. Nachdem wir in Serena-Manier in New York  angekommen sind (Grand Central Station) sind wir selbstverständlich erstmal auf der 5th Ave shoppen gegangen. Das hat Spaß gebracht, bis dein schrecklicher Freund sich ein Fauxpas erlaubt hat. Im Endeffekt war es für dich aber eigentlich ganz günstig, weil du dein Kleid für den halben Preis bekommen hast. Danach haben wir sweete pics beim Rockefeller Center gemacht, verzweifelt nach irgendwelchen Postkarten beim MoMo Museum gesucht, sind durch den Central Park gelaufen, waren im M&M Store, auf der Time Square, in mindestens 10 Souvenirgeschäften in denen jede einzelne Sonnenbrille anprobiert werden musste. Auf dem Rückweg sind wir noch an der 34th mit dem Riesen-Macy's entlanggeschlendert und dem Empire State Building über den Weg gelaufen - was ein Zufall. Noch am gleichen Abend waren wir wieder in Big Apple um es in einer Rooftop-Bar richtig krachen zulassen. Dir hat aber natürlich die Pizza auf dem Weg zur Time Square bei Nacht am besten gefallen. 
+Jedes mal nachdem wir die Bagels vernascht haben, ging es rein in die Stadt die niemals schläft. Nachdem wir in Serena-Manier in New York  angekommen sind (Grand Central Station) sind wir selbstverständlich erstmal auf der 5th Ave shoppen gegangen. Das hat Spaß gebracht, bis dein schrecklicher Freund sich ein Fauxpas erlaubt hat. Im Endeffekt war es für dich aber eigentlich ganz günstig, weil du dein Kleid für den halben Preis bekommen hast. Danach haben wir sweete pics beim Rockefeller Center gemacht, verzweifelt nach irgendwelchen Postkarten beim MoMo Museum gesucht, sind durch den Central Park gelaufen, waren im M&M Store, auf der Time Square, und in mindestens 10 Souvenirgeschäften in denen jede einzelne Sonnenbrille anprobiert werden musste. Auf dem Rückweg sind wir noch an der 34th mit dem Riesen-Macy's entlanggeschlendert und dem Empire State Building über den Weg gelaufen - was ein Zufall. Noch am gleichen Abend waren wir wieder in Big Apple um es in einer Rooftop-Bar richtig krachen zulassen. Dir hat aber natürlich die Pizza auf dem Weg zur Time Square bei Nacht am besten gefallen. 
 
 ![Empire State Building](/img/ESB.jpg "Empire State Building") ![Brutale Shopper](/img/Heftig.jpg "Brutale Shopper") ![Parco Centralo](/img/CP.jpg "Parco Centralo") ![Stinki in Action](/img/Stinki.jpg "Stinki in Action")
 
