--- a/content/post/2017-11-21-chicago.md
+++ b/content/post/2017-11-21-chicago.md
@@ -19,7 +19,7 @@ Nach einer wilden Fahrt sind wir spät Abends in Chicago angekommen & konnten au
 
 ## Tag 1
 
-Am ersten Tag haben wir erstmal eine ausführliche Sightseeing-Tour gestartet um uns einen Überblick über die Stadt zu verschaffen. Von Ryan's Apartment war man in 30min in der Innenstadt. Zuerst sind wir am Fluss am Trump-Tower vorbeigeschlendert & dann entlang der Michigan Ave am Nutella Café vorbei zum Stadtpark in dem sich auch the Bean befindet. Nachdem wir noch einen kurzen Abstecher zum Wasser gemacht haben, sind wir Richtung Metro gegangen. Zu diesem Zeitpunkt war die Stimmung eher angespannt, da meine Lieblingsprinzession Hunger bekommen hatte. Und was macht ihr unartiger Boyfriend? - Geht zu Panera obwohl sie da dock gar nicht hinwollte...so eine Frechheit! Naja, im Endeffekt hat es ihr dann aber doch einigermaßen gut gefallen, sodass alle gut gelaunt Richtung Firehouse 51 aufbrechen konnten. Nachdem wir dann kurz mit Casey und Severeit gechillt haben mussten, wir dann aber auch relativ zügig wieder weiter - SHOPPING war endlich wieder angesagt *_* *_* Für dich war das leider nicht richtig erfolgreich - warum sind auch einfach alle Laufhosen durchsichtig ???? Was soll denn die Scheiße?!?!? Trotzdem war es nico, weil wir ein paar lovely pics machen konnten & ich mich für's große Game am nächsten Tag einkleiden konnte. Ryan ist dann irgendwann zu uns gestoßen und wir sind gemeinsam nach Hause gefahren. Zum Abschluss des Tages waren wir noch auf der gegenüberliegenden Straßenseite essen und haben gemeinsam einen Film geschaut. (An den Film erinnerest du dich allerdings wahrscheinlich nicht mehr du Schlafnase - es ging aber um die Entstehung von McDonald's...just nen kleines fyi)
+Am ersten Tag haben wir erstmal eine ausführliche Sightseeing-Tour gestartet um uns einen Überblick über die Stadt zu verschaffen. Von Ryan's Apartment war man in 30min in der Innenstadt. Zuerst sind wir am Fluss am Trump-Tower vorbeigeschlendert & dann entlang der Michigan Ave am Nutella Café vorbei zum Stadtpark in dem sich auch the Bean befindet. Nachdem wir noch einen kurzen Abstecher zum Wasser gemacht haben, sind wir Richtung Metro gegangen. Zu diesem Zeitpunkt war die Stimmung eher angespannt, da meine Lieblingsprinzessin Hunger bekommen hatte. Und was macht ihr unartiger Boyfriend? - Geht zu Panera obwohl sie da doch gar nicht hinwollte...so eine Frechheit! Naja, im Endeffekt hat es ihr dann aber doch einigermaßen gut gefallen, sodass alle gut gelaunt Richtung Firehouse 51 aufbrechen konnten. Nachdem wir dann kurz mit Casey und Severeit gechillt haben, mussten wir dann aber auch relativ zügig wieder weiter - SHOPPING war endlich wieder angesagt *_* *_* Für dich war das leider nicht richtig erfolgreich - warum sind auch einfach alle Laufhosen durchsichtig ???? Was soll denn die Scheiße?!?!? Trotzdem war es nico, weil wir ein paar lovely pics machen konnten & ich mich für's große Game am nächsten Tag einkleiden konnte. Ryan ist dann irgendwann zu uns gestoßen und wir sind gemeinsam nach Hause gefahren. Zum Abschluss des Tages waren wir noch auf der gegenüberliegenden Straßenseite essen und haben gemeinsam einen Film geschaut. (An den Film erinnerest du dich allerdings wahrscheinlich nicht mehr du Schlafnase - es ging aber um die Entstehung von McDonald's...just nen kleines fyi)
 
 ![Trump-Tower](/img/trump.jpg "Trump-Tower") ![Bean](/img/Bean.jpg "The Bean") ![Shopping](/img/hats.jpg "Shoppingqueens") 
 
@@ -27,7 +27,7 @@ Am ersten Tag haben wir erstmal eine ausführliche Sightseeing-Tour gestartet um
 
 ## Tag 2 
 
-Am Sonntag haben wir dann etwas länger geschlafen bevor wir uns für unser erstes Baseballgame fertig gemacht haben. Die Stimmung auf dem Weg zum Stadium und vor dem Stadium war schon sehr heiter und ich fand das Spiel an sich hat sehr viel Spaß gemacht! & das obwohl wir nur die Hälfte verstanden haben^^ Leider haben wir verloren & das obwohl ich meine Cap auf links aufgesetz habe - das sollte doch eigentlich Glück bringen... 
+Am Sonntag haben wir dann etwas länger geschlafen bevor wir uns für unser erstes Baseballgame fertig gemacht haben. Die Stimmung auf dem Weg zum Stadium und vor dem Stadium war schon sehr heiter und das Spiel an sich hat auch sehr viel Spaß gemacht! & das obwohl wir nur die Hälfte verstanden haben^^ Leider haben wir verloren & das obwohl ich meine Cap auf links aufgesetz habe - das sollte doch eigentlich Glück bringen... 
 Naja, der Stimmung hat es trotzdem keinen Abbruch getan und nachdem wir Hot Dogs essen waren, sind wir auf dem Rückweg an ein paar feucht, fröhlichen Establishments vorbeigekommen^^ 
 
 ![Baseball](/img/field.jpg "Wrigley Field") 
